# Runmote

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.relay  LICENSE  PROJECT.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml  render.yaml  worker.js  wrangler.toml
.github/workflows/: ci-docker.yml  ci-flutter.yml  ci-python.yml  ci-scripts.yml
.opencode/: summary.md
.wrangler/cache/: wrangler-account.json
cloudflare/: worker.js  wrangler.toml
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.tsx  index.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: agents.rs  daemon.rs  lib.rs  main.rs  pairing.rs  tray.rs
desktop/src/components/ui/: button.tsx
scripts/: acp-remote  acp-remote.ps1  install.ps1  install.sh  runmote  runmote.ps1  set-version.ps1  set-version.sh  setup-agents.ps1  setup-agents.sh  setup-autostart.ps1  setup-autostart.sh
scripts/lib/: constants.sh  doctor.sh  installer.sh  progress.sh  ui.sh  utils.sh  wizard.sh
src/: acp_relay.db  runmote_relay.db
src/claude_daemon/: __main__.py  agent.py  bridge.py  log.py
src/common/: logger.py
src/daemon/: config.py  main.py  server.py
src/flutter_app/: .env.example  .gitignore  README.md  pubspec.yaml
src/flutter_app/android/app/: build.gradle.kts  proguard-rules.pro
src/flutter_app/ios/Runner/: Info.plist
src/flutter_app/ios/Runner.xcodeproj/: project.pbxproj
src/flutter_app/lib/: app.dart  main.dart
src/flutter_app/lib/core/: env.dart
src/flutter_app/lib/core/database/: app_database.dart  app_database.g.dart
src/flutter_app/lib/core/models/: agent_capabilities.dart  agent_capabilities.freezed.dart  agent_capabilities.g.dart  agent_info.dart  agent_info.freezed.dart  agent_info.g.dart  (+46 more)
src/flutter_app/linux/: CMakeLists.txt
src/flutter_app/linux/runner/: my_application.cc
src/flutter_app/macos/Flutter/: GeneratedPluginRegistrant.swift
src/flutter_app/macos/Runner.xcodeproj/: project.pbxproj
src/flutter_app/test/: widget_test.dart
src/flutter_app/test/integration/: app_test.dart
src/flutter_app/test/models/: assistant_segment_test.dart  chat_message_test.dart  config_option_test.dart  mcp_server_test.dart
src/flutter_app/test/providers/: chat_provider_test.dart  session_list_provider_test.dart
src/flutter_app/test/widgets/: chat_skeleton_test.dart  diff_viewer_test.dart  session_card_test.dart  tool_call_card_test.dart
src/flutter_app/web/: index.html  manifest.json
src/flutter_app/windows/: CMakeLists.txt
src/flutter_app/windows/runner/: Runner.rc  main.cpp
src/relay/: acp_relay.db  config.py  database.py  discovery.py  main.py  pairing.py  session_store.py  state.py
src/relay/handlers/: app.py  daemon.py
tests/: conftest.py  test_client.py  test_common_logger.py  test_daemon_config.py  test_daemon_main.py  test_integration.py  test_relay_config.py  test_relay_database.py  test_relay_discovery.py  test_relay_handlers.py  test_relay_pairing.py  test_relay_session_store.py
(+62 files in other folders)
