[project]
name = "acp"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.2",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
    "zeroconf>=0.150.0",
    "agent-client-protocol>=0.8.0",
    "qrcode>=8.0",
    "pillow>=11.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
    "pytest>=8",
    "pytest-asyncio>=0.26",
]

[tool.hatch.build.targets.wheel]
only-include = ["src/__init__.py", "src/common", "src/daemon", "src/relay"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.11",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"src/daemon/main.py" = ["E402"]
"tests/*" = ["F401", "F811", "F841"]
"src/relay/handlers/*" = ["E402"]
